@@ -22,9 +22,9 @@ requires 'Mo' => 0;
 requires 'Mo::utils' => 0.15;
 requires 'Mo::utils::Language' => 0;
 requires 'Readonly' => 0;
-resources 'bugtracker' => 'https://github.com/michal-josef-spacek/Data-Simple/issues';
-resources 'homepage' => 'https://github.com/michal-josef-spacek/Data-Simple';
-resources 'repository' => 'git://github.com/michal-josef-spacek/Data-Simple';
+resources 'bugtracker' => 'https://github.com/michal-josef-spacek/Data-Message-Simple/issues';
+resources 'homepage' => 'https://github.com/michal-josef-spacek/Data-Message-Simple';
+resources 'repository' => 'git://github.com/michal-josef-spacek/Data-Message-Simple';
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
 tests_recursive;
